refactor: update repository interfaces and fix package naming for branch requests